<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/icon_cost_of_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/coste_servicio"
        app:layout_constraintEnd_toStartOf="@id/coste_servicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/coste_servicio"
        app:srcCompat="@drawable/ic_store" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/coste_servicio"
        android:layout_width="160dp"
        android:layout_marginStart="16dp"
        android:hint="@string/coste_del_servicio"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/icon_cost_of_service"
        app:layout_constraintTop_toTopOf="parent">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/coste_servicio_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/icon_service"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/preguntaServicio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/preguntaServicio"
        app:srcCompat="@drawable/ic_service" />

    <TextView
        android:id="@+id/preguntaServicio"
        style="@style/Widget.TipTime.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/como_ha_sido_el_servicio"
        app:layout_constraintStart_toStartOf="@id/coste_servicio"
        app:layout_constraintTop_toBottomOf="@id/coste_servicio" />



    <RadioGroup
        android:id="@+id/grupoBotones"
        style="@style/Widget.TipTime.CompoundButton.RadioButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checkedButton="@id/PrimerBoton"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@id/preguntaServicio"
        app:layout_constraintTop_toBottomOf="@id/preguntaServicio">
        <!--Añadiendo lo botones dentro del grupo radio -->
        <RadioButton
            android:id="@+id/PrimerBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amazing_20" />

        <RadioButton
            android:id="@+id/SegundoBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/good_18" />

        <RadioButton
            android:id="@+id/TercerBoton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okay_15" />

    </RadioGroup>

    <ImageView
        android:id="@+id/icon_redondeo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:importantForAccessibility="no"
        app:layout_constraintBottom_toBottomOf="@id/redondear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/redondear"
        app:srcCompat="@drawable/ic_redondear" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/redondear"
        style="@style/Widget.TipTime.CompoundButton.Switch"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/redondear_propina"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/grupoBotones"
        app:layout_constraintTop_toBottomOf="@id/grupoBotones" />

    <Button
        android:id="@+id/boton1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/calcular"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/redondear"
        app:layout_constraintTop_toBottomOf="@id/redondear" />

    <TextView
        android:id="@+id/propina"
        style="@style/Widget.TipTime.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Propina resultante: $10"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/boton1" />


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>